# muster

./: .gitignore  CLAUDE.md  README.md  build-all.bat  bundle-relay.js  muster-v0.1.0.apk.idsig  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  seed-nodes.json  start-web.bat  tsconfig.base.json
apps/desktop/: gen-icon.js  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/permissions/: shell-scope.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/node/: package.json
apps/node/src/: index.ts
apps/relay/: env.example.ts  package.json
apps/relay/src/: adminBot.ts  bandwidthMonitor.ts  blobDB.ts  channelHandler.ts  communityDB.ts  communityDatabase.ts  communityHandler.ts  database.ts  dhtHandler.ts  dmDB.ts  dmHandler.ts  dmRoutingDB.ts  dmRoutingHandler.ts  emailHandler.ts  envelopeDB.ts  envelopeHandler.ts  fileDB.ts  fileHandler.ts  friendDB.ts  friendHandler.ts  groupKeyDB.ts  groupKeyHandler.ts  index.ts  manifestDB.ts  manifestHandler.ts  nodeDB.ts  nodeInfoHandler.ts  nodeTier.ts  nodeUpdater.ts  opHandler.ts  opLogDB.ts  opMaterializer.ts  ownershipHandler.ts  peerManager.ts  pieceEviction.ts  posHandler.ts  postDB.ts  postHandler.ts  profileHandler.ts  relayCrypto.ts  (+15 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/architecture/: ARCHITECTURE.md
scripts/: fetch-node-sidecar.js  fix-webrtc-stub.js
stubs/libp2p-webrtc-stub/: package.json
(+55 files in other folders)
